fix index page layout issue

--- a/styles/base.css
+++ b/styles/base.css
@@ -56,9 +56,10 @@ header a:hover, footer a:hover {
 
 #intro {
     margin-top: 100px;
-    max-width: 1000px;
+    max-width: 1600px;
 }
 #mypic {
+    display: none;
     width: 100%;
     max-width: 350px;
     border-radius: 2.5%;
